--- a/style.css
+++ b/style.css
@@ -6,7 +6,61 @@ body{
     align-items: center;
     font-family: cursive;
     background-color: slateblue;
+    flex-direction: column;
+    transition: .3s;
+}
 
+.input{
+    visibility: hidden;
+}
+
+.label{
+    display: flex;
+    margin-bottom: 30px;
+    width: 80px;
+    height: 40px;
+    background-color: white;
+    border-radius: 20px;
+    cursor: pointer;
+
+}
+
+.circle{
+    width: 34px;
+    height: 34px;
+    background-color: orangered;
+    border-radius: 50%;
+    top: 3px;
+    left: 3px;
+    position: relative;
+    animation: toggleOff .3s linear forwards;
+}
+
+.input:checked + .label{
+    background-color: white;
+}
+
+.input:checked + .label .circle{
+    animation: toggleOn .3s linear forwards;
+    background-color: black;
+}
+
+@keyframes toggleOn {
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(40px);
+    }
+}
+
+@keyframes toggleOff {
+    0%{
+        transform: translateX(40px);
+    }
+    100%{
+        transform: translateX(0);
+    }
 }
 
 .calendar-container{
@@ -16,6 +70,7 @@ body{
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,.3);
     overflow: hidden;
+    margin-bottom: 30px;
 }
 
 .month-name{
@@ -45,3 +100,41 @@ body{
     font-weight: 500;
 }
 
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: white;
+    padding: 20px 40px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0,0,0,.3);
+    text-decoration: none;
+    color: black;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.btn span{
+    position: relative;
+    z-index: 1;
+}
+
+.btn::before{
+    content: "";
+    position: absolute;
+    background-color: orangered;
+    width: 0;
+    height: 0;
+    left: var(--xPos);
+    top: var(--yPos);
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    transition: width .5s, height .5s;
+}
+
+.btn:hover::before{
+    width: 300px;
+    height: 300px;
+}
