--- a/style.css
+++ b/style.css
@@ -138,3 +138,33 @@ body{
     width: 300px;
     height: 300px;
 }
+
+.loading-container {
+    text-align: center;
+    width: 300px;
+    position: relative;
+    margin-bottom: 30px;
+    color: white;
+}
+
+.counter {
+    font-size: 25px;
+}
+
+.loading-bar-back {
+    position: absolute;
+    height: 8px;
+    background-color: lightgrey;
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+}
+
+.loading-bar-front {
+    position: absolute;
+    height: 8px;
+    background-color: orangered;
+    width: 10%;
+    border-radius: 5px;
+    border: none;
+}
